Replace logo gap by a margin to fix problem on mobile

--- a/style.css
+++ b/style.css
@@ -59,7 +59,6 @@ hr {
 
 .logo {
     display: flex;
-    gap: 1rem;
     align-items: center;
     color: var(--accent-color);
 }
@@ -67,6 +66,7 @@ hr {
 .circle {
     background-color: var(--accent-color);
     padding: 0.4rem;
+    margin-right: 1rem;
     border-radius: 100%;
     height: 1.75rem;
 }
